# Z2

./: .gitignore  CMakeLists.txt  README.md
conf/: config.ini
qt/Z2/: SoundRepository.cpp  SoundRepository.h  Z2.pro  gameframe.cpp  gameframe.h  gameframe.ui  gamemapdisplay.cpp  gamemapdisplay.h  gamemapdisplay.ui  gameutil.cpp  gameutil.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  imagerepository.cpp  imagerepository.h  lang_en.qm  language.zh_CN.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  playercolor.cpp  playercolor.h
resources/: z2.psd
resources/entity/: Archer.ini  Cannon.ini  ConstructionBase.ini  CrossBowMan.ini  Demo.ini  FPBuilder.ini  Farmer.ini  Fighter.ini  FrontPost.ini  Infantry.ini  Killer.ini  MachineGun.ini  MusketMan.ini  Scout.ini  SwordsMan.ini  Warrior.ini
resources/map/: Carre.txt  Demo.txt  InfinityIsland.txt  TestMap.txt  Triple.txt
resources/tech/: TechArcher.ini  TechCannon.ini  TechCrossBowMan.ini  TechFPBuilder.ini  TechFighter.ini  TechInfantry.ini  TechMachineGun.ini  TechMusketMan.ini  TechScout.ini  TechSwordsMan.ini  TechWarrior.ini
resources/text/: Text_cn.ini  Text_en.ini
saves/: SaveForTest.save  SaveForTest2.save  SaveForTest3.save
src/: ClientMain.cpp  ServerMain.cpp  main.cpp
src/bot/: AlphaBot.cpp  AlphaBot.h  BasicBot.cpp  BasicBot.h  Bot.cpp  Bot.h  BotClientPort.cpp  BotClientPort.h  BotClientProxy.cpp  BotClientProxy.h  Dummy.cpp  Dummy.h  GameEndedException.cpp  GameEndedException.h  Task.cpp  Task.h  TaskCaptureResource.cpp  TaskCaptureResource.h  TaskGuard.cpp  TaskGuard.h  TaskMine.cpp  TaskMine.h  TaskMoveAttack.cpp  TaskMoveAttack.h  TaskResearch.cpp  TaskResearch.h
src/commandLine/: CommandLineClient.cpp  CommandLineClient.h  CommandLineGameGui.cpp  CommandLineGameGui.h
src/config/: BotRepository.cpp  BotRepository.h  EntityRepository.cpp  EntityRepository.h  GameConfiguration.cpp  GameConfiguration.h  Localization.cpp  Localization.h  MapRepository.cpp  MapRepository.h  RepositoryTemplate.cpp  RepositoryTemplate.h  SerializableRegistry.cpp  SerializableRegistry.h  TechRepository.cpp  TechRepository.h  TextRepository.cpp  TextRepository.h
src/core/: BotClientPort.cpp  BotClientPort.h  Client.cpp  Client.h  ClientPort.cpp  ClientPort.h  ClientProxy.cpp  ClientProxy.h  EntityRepository.cpp  EntityRepository.h  GameConfiguration.cpp  GameConfiguration.h  GameController.cpp  GameController.h  GameGui.cpp  GameGui.h  Lobby.cpp  Lobby.h  LocalClient.cpp  LocalClient.h  Message.cpp  Message.h  MessageConductor.cpp  MessageConductor.h  RemoteClient.cpp  RemoteClient.h  RemoteClientProxy.cpp  RemoteClientProxy.h  RemoteServerProxy.cpp  RemoteServerProxy.h  Serializable.cpp  Serializable.h  SerializableRegistry.cpp  SerializableRegistry.h  (+6 more)
(+103 files in other folders)
